--- a/wp-content/themes/discussionwp/assets/css/fspstyles.css
+++ b/wp-content/themes/discussionwp/assets/css/fspstyles.css
@@ -255,6 +255,7 @@ h6 { font-family: Roboto;font-style: normal;}
 footer .mkd-footer-bottom-holder .widget{
     color: #fff;
 }*/
+.footer-socialmedia {padding-top:50px;}
 .copyrights p{font-size: 12px;}
 .copyrights p a:hover{color: #f99d3e;}  
 /*footer css ends here*/
@@ -291,17 +292,6 @@ footer .mkd-footer-bottom-holder .widget{
     color:#cb8132;
 }
 /*category page banner/slide image css ends here*/
-
-/*Maginific pop css starts here*/
-.white-popup-block {
-    background: #FFF;
-    padding: 20px 30px;
-    text-align: left;
-    max-width: 520px;
-    margin: 40px auto;
-    position: relative;
-}
-/*Maginific pop css ends here*/
 
 /*Login css starts here*/
 .login-container {
@@ -356,3 +346,64 @@ footer .mkd-footer-bottom-holder .widget{
     }
 }
 /*Login css ends here*/
+
+/*find-a-branch-container popup css starts here*/
+/*Maginific pop css starts here*/
+.white-popup-block {
+    background: #FFF;
+    padding: 0px;
+    text-align: left;
+    max-width: 520px;
+    margin: 40px auto;
+    position: relative;
+}
+/*Maginific pop css ends here*/
+.find-a-branch-container h4{
+    background: #e6e7e8;
+    padding: 15px;
+    text-align: center;
+    font-size: 18px;
+}
+.fs-custom-select {
+    width: 60%;
+    overflow: hidden;
+    cursor: pointer;
+    background: #fff url("../img/select-arrow.png") no-repeat scroll 95% 50%;
+    margin: 60px auto;
+}
+.fs-custom-select select {
+    background-color: transparent;
+    background-image: none;
+    border-radius: 0;
+    cursor: pointer;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    -ms-appearance: none;
+    -o-appearance: none;
+    appearance: none;
+    padding: 10px 27px 10px 15px;
+    width: 99.9%;
+}
+.fs-custom-select select::-ms-expand {
+    display: none;
+}
+.fs-custom-select select:focus {
+    outline: none;
+}
+.fs-custom-select select option {
+    color:#337ab7;
+    padding: 0.5em;
+}
+.ev-btn-container{
+    background: #e6e7e8;
+    padding: 15px;
+    text-align: center;
+}
+.ev-btn-container button{
+    background: #b3cc36;
+    border: 1px solid #a4bb6a;
+    padding: 10px 20px;
+    color:#ffffff;
+    cursor: pointer;
+}
+/*find-a-branch-container popup ends starts here*/
