--- a/wp-content/themes/discussionwp/assets/css/fspstyles.css
+++ b/wp-content/themes/discussionwp/assets/css/fspstyles.css
@@ -145,6 +145,7 @@ h6 { font-family: Roboto;font-style: normal;}
     .mkd-sticky-holder .mkd-main-menu > ul > li:last-child{
         float: right;
         margin-right: 52px;
+        background: #f79c49;
     }
     .mkd-vertical-align-containers .mkd-position-left{
         width: 100%;
@@ -161,6 +162,10 @@ h6 { font-family: Roboto;font-style: normal;}
     .mkd-main-menu > ul > li:last-child{
         float: right;
         margin-right: 52px;
+        background: #f79c49;
+    }
+    .mkd-main-menu > ul > li:last-child:hover > a{
+         background: #cb8132;
     }
     .mkd-vertical-align-containers .mkd-position-right{
         top:-100%;
@@ -249,18 +254,23 @@ h6 { font-family: Roboto;font-style: normal;}
 /*header css ends here*/
 
 /*footer css starts here*/
-/*footer .mkd-footer-bottom-holder .mkd-footer-bottom-holder-inner{
-    background: #4c4d4f;
+footer .mkd-footer-top-holder {
+    background-color: #4c4d4f;
 }
-footer .mkd-footer-bottom-holder .widget{
-    color: #fff;
-}*/
-.footer-socialmedia {padding-top:50px;}
-.copyrights p{font-size: 12px;}
-.copyrights p a:hover{color: #f99d3e;}  
+.footer-socialmedia {
+    padding-top:50px;
+}
+.copyrights p{
+    font-size: 12px;
+}
+.copyrights p a:hover{
+    color: #f99d3e;
+}  
 /*footer css ends here*/
 
-
+.mkd-psi-title{
+    padding-top: 10px;
+}
 /*category page banner/slide image css starts here*/
 #category_banner .slick-list.draggable{
     cursor:inherit;
@@ -382,7 +392,9 @@ footer .mkd-footer-bottom-holder .widget{
     -o-appearance: none;
     appearance: none;
     padding: 10px 27px 10px 15px;
-    width: 99.9%;
+    width: 99.8%;
+    border: 1px solid #d7d7d7;
+    line-height: 25px;
 }
 .fs-custom-select select::-ms-expand {
     display: none;
