Moved contact page and about us page

--- a/wp-content/themes/discussionwp/assets/css/fspstyles.css
+++ b/wp-content/themes/discussionwp/assets/css/fspstyles.css
@@ -419,3 +419,39 @@ footer .mkd-footer-top-holder {
     cursor: pointer;
 }
 /*find-a-branch-container popup ends starts here*/
+
+
+/* contact form section starts here */
+
+
+.vc_custom_1457354324375 {
+    padding-left: 15px;
+    padding-right: 15px;
+}
+.vc_custom_1457353735985 {
+    padding-left: 0;
+    padding-right: 15px;
+    padding-top: 25px;
+}
+.vc_custom_1457446509978 {
+    background-color: #ffffff;
+    padding-left: 25px;
+    padding-top: 15px;
+}
+.vc_custom_1457693380284 {
+    padding-right: 25px;
+    padding-top: 35px;
+}
+.vc_custom_1457350178380 {
+    padding-bottom: 35px;
+}
+.vc_custom_1457354344312 {
+    padding-left: 15px !important;
+    padding-right: 0 !important;
+}
+.vc_custom_section
+{
+    padding-left: -15px;
+    padding-right: 15px;
+}
+/* contact form section ends here */
