Moved contact page and about us page

--- a/wp-content/themes/discussionwp/assets/css/fspstyles.css
+++ b/wp-content/themes/discussionwp/assets/css/fspstyles.css
@@ -421,7 +421,7 @@ footer .mkd-footer-top-holder {
 /*find-a-branch-container popup ends starts here*/
 
 
-/* contact form section starts here */
+/* contact-form section starts here */
 
 
 .vc_custom_1457354324375 {
