--- a/wp-content/themes/discussionwp/assets/css/fspstyles.css
+++ b/wp-content/themes/discussionwp/assets/css/fspstyles.css
@@ -47,7 +47,9 @@ h5 { font-family: Roboto;font-style: normal;}
 
 h6 { font-family: Roboto;font-style: normal;}
 
-
+li{
+    list-style: none;
+}
 .mkd-header-type3 .mkd-page-header .mkd-menu-area { 
     background-color: #b3cc36;
 }
@@ -165,7 +167,7 @@ h6 { font-family: Roboto;font-style: normal;}
         background: #f79c49;
     }
     .mkd-main-menu > ul > li:last-child:hover > a{
-         background: #cb8132;
+        background: #cb8132;
     }
     .mkd-vertical-align-containers .mkd-position-right{
         top:-100%;
@@ -257,9 +259,6 @@ h6 { font-family: Roboto;font-style: normal;}
 footer .mkd-footer-top-holder {
     background-color: #4c4d4f;
 }
-.footer-socialmedia {
-    padding-top:50px;
-}
 .copyrights p{
     font-size: 12px;
 }
@@ -327,12 +326,15 @@ footer .mkd-footer-top-holder {
 .login-container ul li label{
     line-height: 37px;
     float: left;
+    text-align: left;
+    width: 30%;
 }
 .login-container ul li input{
     outline: none;
     padding: 10px;
     border: 1px solid #e6e7e8;
     float: right;
+    width: 60%;
 }
 .fsplogin_btn{
     background: #f99d3e;
@@ -420,10 +422,126 @@ footer .mkd-footer-top-holder {
 }
 /*find-a-branch-container popup ends starts here*/
 
+/*About-us*/
+.about-us-container{
+    background: #fff;
+    padding:70px 60px;
+}
+.about-us-container h2{
+    text-align: center;
+    padding-bottom: 10px;
+}
+.about-us-content{
+    padding-bottom: 15px;
+}
+.about-us-container p{
+    padding: 0px 0 20px;
+}
+.fspgreen_btn{
+    text-align: center;
+}
+.fspgreen_btn input{
+    background: #b3cc36;
+    padding: 17px 45px;
+    border: none;
+    color: #fff;
+    font-weight: bold;
+}
+.fspgray_btn{
+    text-align: center;
+}
+.fspgray_btn input{
+    background: #c1c1c1;
+    padding: 10px 20px;
+    border: none;
+    color: #fff;
+    font-weight: bold;
+}
+.fsporange_btn input{
+    background: #f69c4a;
+    padding: 10px 40px;
+    border: none;
+    color: #fff;
+    font-weight: bold;
+}
+.fsp-page-container{
+    background: #ffffff;
+    padding:40px 30px;
+    margin: 40px 0;
+}
+.user-profile-container *, .user-profile-container *::after, .user-profile-container *::before {
+    box-sizing: border-box;
+}
+.user-profile-rgtinfo{
+        padding: 0 15px 0 30px;
+}
+.user-profile-rgtinfo ul li{
+    padding-bottom: 15px;
+}
+.user-profile-rgtinfo ul li input{
+    padding: 8px 15px;
+    width: 100%;
+
+}
+.user-profile-rgtinfo h2, .fsp-saved-articles h2{
+    font-size: 23px;
+}
+/*Saved Articles*/
+.fsp-saved-articles *, .fsp-saved-articles *::after, .fsp-saved-articles *::before {
+    box-sizing: border-box;
+}
+
+.saved-articles-container ul{
+    overflow: hidden;
+}
+.saved-articles-container ul li{
+    background: #f4f4f4;
+    overflow: hidden;
+   margin-bottom: 25px;
+}
+.saved_art_img img{
+    display: block;
+}
+.saved_art_cont {
+    float: left;
+    width: 53%;
+    padding: 3% 3% 0;
+    min-height: 117px;
+    border-right: 1px solid #d1d1d1;
+}
+.saved_art_cont h4{   
+    font-size: 17px;
+    font-weight: 500;
+}
+.saved_art_cont p{
+    line-height: 18px;
+    font-size: 13px;
+    color:#6c6b6b;
+}
+.saved_art_img{
+    float:left;
+}
+.saved_art_cont_btns{
+    float: right;
+    padding: 5% 2.5% 0 0;
+}
+.saved_art_cont_btns a{
+    width: 95px;
+    text-align: center;
+    color: #fff;
+    display: block;
+    font-size: 12px;
+    padding: 2px 0;
+    margin: 0 0 10px;
+}
+.fsp_remove_btn{
+    background: #c1c1c1;
+}
+.fsp_readart_btn{
+    background: #b3cc36;
+}   
 
 /* contact-form section starts here */
-
-
 .vc_custom_1457354324375 {
     padding-left: 15px;
     padding-right: 15px;
