--- a/wp-content/themes/discussionwp/assets/css/fspstyles.css
+++ b/wp-content/themes/discussionwp/assets/css/fspstyles.css
@@ -267,6 +267,15 @@ footer .mkd-footer-top-holder {
 }  
 /*footer css ends here*/
 
+.fsp-inner-container{
+    position: relative;
+    background: #fff;
+    padding: 32px 37px 42px;
+    margin-bottom: 30px;
+}
+.fsp-padd-30px{
+    padding:30px 0;
+}
 .mkd-psi-title{
     padding-top: 10px;
 }
@@ -472,8 +481,11 @@ footer .mkd-footer-top-holder {
 .user-profile-container *, .user-profile-container *::after, .user-profile-container *::before {
     box-sizing: border-box;
 }
+.aavthar{
+    text-align: center;
+}
 .user-profile-rgtinfo{
-        padding: 0 15px 0 30px;
+    padding: 0 15px 0 30px;
 }
 .user-profile-rgtinfo ul li{
     padding-bottom: 15px;
@@ -481,10 +493,10 @@ footer .mkd-footer-top-holder {
 .user-profile-rgtinfo ul li input{
     padding: 8px 15px;
     width: 100%;
-
+    border: 1px solid #b9b9b9;
 }
-.user-profile-rgtinfo h2, .fsp-saved-articles h2{
-    font-size: 23px;
+.user-profile-rgtinfo h2, .fsp-saved-articles h2, .fsp-followed-categories h2{
+    font-size: 20px;
 }
 /*Saved Articles*/
 .fsp-saved-articles *, .fsp-saved-articles *::after, .fsp-saved-articles *::before {
@@ -497,7 +509,7 @@ footer .mkd-footer-top-holder {
 .saved-articles-container ul li{
     background: #f4f4f4;
     overflow: hidden;
-   margin-bottom: 25px;
+    margin-bottom: 25px;
 }
 .saved_art_img img{
     display: block;
@@ -540,7 +552,63 @@ footer .mkd-footer-top-holder {
 .fsp_readart_btn{
     background: #b3cc36;
 }   
+.followed_ctg_content ul li{
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+.ctg_list{
+    background: #f7f7f7;
+    border: 1px solid #e1e1e1;
+    padding: 7px;
+}
+.ctg_list h4{
+    font-size: 16px;
+    text-align: center;
+}
+.ctg_list span{
+    float: right;
+    font-size: 18px;
+}
+.ctg_list img{
+    width: 100%;
+}
 
+@media only screen and (max-width: 1200px) {
+    .fsp-page-container {
+        padding: 40px 30px 0;
+    }
+    .user-profile-rgtinfo {
+        padding: 10% 0;
+    }
+    .saved_art_img {
+        float: none;
+    }
+    .saved_art_img img {
+        display: block;
+        width: 100%;
+    }
+    .saved_art_cont {
+        border-right: none;
+        float: none;
+        min-height: 117px;
+        padding: 10% 9% 0;
+        width: 100%;
+    }
+    .saved_art_cont_btns {
+        float: none;
+        text-align: center;
+        padding: 5% 0% 10% 0;
+    }
+    .saved_art_cont_btns a{
+        float: none;
+        display: inline-block;
+    }
+}
+@media only screen and (max-width: 600px) {
+    .followed_ctg_content ul li{
+        width: 100%;
+    }
+}
 /* contact-form section starts here */
 .vc_custom_1457354324375 {
     padding-left: 15px;
@@ -573,3 +641,17 @@ footer .mkd-footer-top-holder {
     padding-right: 15px;
 }
 /* contact form section ends here */
+
+.fsp-recommended-stories-cont h3{
+    font-size: 20px;
+    padding-bottom: 20px;
+}
+.mkd-post-fsp-savestories span, .mkd-post-info-fsp-singlepost span{
+    padding-left: 6px;
+}
+.mkd-post-fsp-savestories i, .mkd-post-info-fsp-singlepost i{
+    font-size: 15px;
+}
+.mkd-post-fsp-savestories a, .mkd-post-info-fsp-singlepost a{
+    font-size: 13px !important;
+}
