--- a/wp-content/themes/discussionwp/assets/css/fspstyles.css
+++ b/wp-content/themes/discussionwp/assets/css/fspstyles.css
@@ -336,18 +336,20 @@ footer .mkd-footer-top-holder {
     padding-bottom: 15px;
     overflow: hidden;
 }
-.login-container ul li label{
-    line-height: 37px;
-    float: left;
-    text-align: left;
-    width: 30%;
-}
 .login-container ul li input{
     outline: none;
     padding: 10px;
     border: 1px solid #e6e7e8;
+}
+.login-container ul li .lg-fm-lft{
+    line-height: 37px;
+    text-align: left;
+    width: 30%;
+    float: left;
+}
+.login-container ul li .lg-fm-rgt{
     float: right;
-    width: 60%;
+    width: 70%;
 }
 .fsplogin_btn{
     background: #f99d3e;
@@ -364,8 +366,16 @@ footer .mkd-footer-top-holder {
 .fs_forgot_password a:hover{
     text-decoration: none;
 }
+#fspr_user_login-error, #fspr_user_pass-error {
+    color: red; 
+    float: left;
+    font-size: 13px;
+}
+.login-container .error{
+    color:red
+}    
 @media only screen and (max-width: 480px) {
-    .login-container ul li input{
+    .login-container ul li .lg-fm-rgt{
         float: left;
         width: 87%;
     }
@@ -716,3 +726,60 @@ aside.mkd-sidebar .mkd-section-title-holder .mkd-st-title, .wpb_widgetised_colum
     margin-right: 50px;
 }
 /*follow-category styles ends here*/
+
+/*sidebar social icons styles starts here*/
+.sidebar-social-icons{
+    overflow: hidden;
+}
+.social-icon-wd-container ul li.wd-fb{
+    background-color: #3b5998;
+}
+.social-icon-wd-container ul li.wd-twitter{
+    background-color: #1dcaff;
+}
+.social-icon-wd-container ul li.wd-googleplus{
+    background-color: #dd4b39;
+}
+.social-icon-wd-container ul li.wd-pinterest{
+    background-color: #e91e25;
+}
+.social-icon-wd-container ul li.wd-linkedin{
+    background-color: #067aba;
+}
+.social-icon-wd-container ul li.wd-fb:hover{
+    background-color: #4664a2;
+}
+.social-icon-wd-container ul li.wd-twitter:hover{
+    background-color: #3ed2ff;
+}
+.social-icon-wd-container ul li.wd-googleplus:hover{
+    background-color: #ed5d4b;
+}
+.social-icon-wd-container ul li.wd-pinterest:hover{
+    background-color: #f72c33;
+}
+.social-icon-wd-container ul li.wd-linkedin:hover{
+    background-color: #158acb;
+}
+.social-icon-wd-container ul li{
+    float: left;
+    width: 33.33%;
+    margin: 0 !important;
+    position: relative;
+    border-right: 1px solid #e6e7e8;
+    border-bottom: 1px solid #e6e7e8;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}    
+.social-icon-wd-container ul li a{
+    height: 100%;
+    width: 100%;
+    -webkit-border-radius: 0;
+    padding: 40% 0;
+    font-size: 24px;
+    color: #ffffff;
+    text-align: center;
+    display: block;
+}      
+/*sidebar social icons styles ends here*/
