--- a/wp-content/themes/discussionwp/assets/css/fspstyles.css
+++ b/wp-content/themes/discussionwp/assets/css/fspstyles.css
@@ -338,8 +338,9 @@ footer .mkd-footer-top-holder {
 }
 .login-container ul li input{
     outline: none;
-    padding: 10px;
     border: 1px solid #e6e7e8;
+    padding: 5% 2%;
+    width: 95%
 }
 .login-container ul li .lg-fm-lft{
     line-height: 37px;
@@ -380,6 +381,15 @@ footer .mkd-footer-top-holder {
         width: 87%;
     }
 }
+ /***Register**/
+    .fspr_register_error{
+        color: red;
+        width: 100%;
+         font-size: 13px;
+    }   
+    .fspr_comment_error{
+        color: red ;
+    }
 /*Login css ends here*/
 
 /*find-a-branch-container popup css starts here*/
@@ -695,6 +705,11 @@ aside.mkd-sidebar .mkd-section-title-holder .mkd-st-title, .wpb_widgetised_colum
 .mkd-ratings-holder-container .post-ratings img{
     padding: 0 10px;
 }
+@media only screen and (max-width: 480px) {
+    .mkd-ratings-holder .mkd-ratings-stars-holder{
+        width: 100%;
+    }
+}
 /*Rating ends here*/
 
 /*single article page styles starts here*/
@@ -716,14 +731,28 @@ aside.mkd-sidebar .mkd-section-title-holder .mkd-st-title, .wpb_widgetised_colum
     position: relative;
     top: -10px;
 }
-.mkd-follow-category a{
+.mkd-follow-category button{
     background: #f79c49;
     color: #fff;
     border: 3px solid #fff;
     text-transform: uppercase;
-    padding: 5px 30px;
+    padding: 10px 30px;
     float: right;
     margin-right: 50px;
+}
+@media only screen and (max-width: 767px) {
+    .mkd-follow-category button{
+        margin-right: 0px;
+    }
+}
+@media only screen and (max-width: 480px) {
+    .mkd-follow-category{
+        position: relative;
+        top:0px;
+    }
+    .mkd-follow-category button{
+        float: left;
+    }
 }
 /*follow-category styles ends here*/
 
@@ -783,3 +812,7 @@ aside.mkd-sidebar .mkd-section-title-holder .mkd-st-title, .wpb_widgetised_colum
     display: block;
 }      
 /*sidebar social icons styles ends here*/
+.fsp-ads-homepage img{
+    text-align:center;    
+    margin: 0 auto 10px;
+}
