--- a/wp-content/themes/discussionwp/assets/css/fspstyles.css
+++ b/wp-content/themes/discussionwp/assets/css/fspstyles.css
@@ -994,5 +994,9 @@ aside.mkd-sidebar .mkd-section-title-holder .mkd-st-title, .wpb_widgetised_colum
     .mkd-fsp-blog-holder article{
         margin: 0;
     }
+    .mdk-sng-pst ul li{
+        list-style-type: disc;
+        list-style: inherit;
+    }
 }
 /*single article page styles ends here*/
